--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiofiles
+aiohtaiofiles
 aiohttp
 asyncio
 beautifulsoup4
@@ -10,7 +11,7 @@ heroku3
 motor
 pillow
 psutil
-py-tgcalls==1.1.2
+py-tgcalls==0.9.2
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
