--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 aiofiles
-aiohtaiofiles
 aiohttp
 asyncio
 beautifulsoup4
@@ -9,7 +8,7 @@ gitpython
 hachoir
 heroku3
 motor
-pillow
+pillow==9.5.0
 psutil
 py-tgcalls==0.9.2
 pykeyboard
